Some more alignment fixes

--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -22,7 +22,7 @@ label {
 
 input[type="text"] {
     margin-bottom: 15px;
-    width: 500px;
+    width: 520px;
 }
 
 textarea {
@@ -180,7 +180,7 @@ div#main_container {
 div#mainmiddle {
     margin:0px 0px 0px 0px;
     background:url(../../images/content-bg.jpg) 0 0 repeat-y;
-    padding:10px 59px 0 59px;
+    padding:0px 160px 0 40px;
 }
 
 /* footer */
@@ -239,7 +239,7 @@ div.menu {
 .hline {
   border-bottom: solid black;
   border-bottom-width: 1px;
-  width: 515px;
+  width: 531px;
   padding-top: 2px;
 }
 
@@ -267,7 +267,7 @@ hr {
 
 .desc_container {
   background-color: #c7bb90;
-  padding: 5px 15px;
+  padding: 5px 5px;
   margin-right: 15px;
 }
 
@@ -288,7 +288,7 @@ button {
 
 .save_button {
   @include fancy-button-colors(#261c1e, adjust-hue(#261c1e, -120), darken(adjust-hue(#261c1e, -120), 6));
-  margin: 10px 26px;
+  margin: 10px 21px 0px 0px;
   float: right;
   padding: 1px 5px;
   cursor: pointer;
@@ -312,8 +312,8 @@ button {
 
 .edit_button {
   float: right;
-  margin-right: 16px;
-  margin-top: -18px;
+  margin-right: 21px;
+  margin-top: -8px;
 
 }
 
